// Vitest Snapshot v1

exports[`Svelte > jsx > Javascript Test > AdvancedRef 1`] = `
"unknown: Missing semicolon. (2:18)

  1 | let _ = 
> 2 |             Choose a car:
    |                   ^
  3 |           "
`;

exports[`Svelte > jsx > Javascript Test > Basic 1`] = `
"unknown: Missing semicolon. (2:12)

  1 | let _ = 
> 2 |       Hello! I can run in React, Vue, Solid, or Liquid!
    |             ^
  3 |     "
`;

exports[`Svelte > jsx > Javascript Test > Basic 2`] = `
"unknown: Missing semicolon. (1:11)

> 1 | let _ = ! I can run in Qwik, Web Component, React, Vue, Solid, or Liquid!
    |            ^
  2 |           "
`;

exports[`Svelte > jsx > Javascript Test > Basic Context 1`] = `
"unknown: Missing semicolon. (2:12)

  1 | let _ = 
> 2 |       Hello! I can run in React, Vue, Solid, or Liquid!
    |             ^
  3 |       "
`;

exports[`Svelte > jsx > Javascript Test > Basic OnMount Update 1`] = `
"<script>
  import { onMount } from \\"svelte\\";

  export let hi;
  export let bye;

  let name = \\"PatrickJS\\";
  let names = [\\"Steve\\", \\"PatrickJS\\"];
  name = \\"PatrickJS onInit\\" + hi;

  onMount(() => {
    name = \\"PatrickJS onMount\\" + bye;
  });
</script>

<div>Hello{name}</div>"
`;

exports[`Svelte > jsx > Javascript Test > Basic Outputs 1`] = `
"<script>
  import { onMount } from \\"svelte\\";

  export let onMessage;
  export let onEvent;
  export let message;

  let name = \\"PatrickJS\\";

  onMount(() => {
    onMessage(name);
    onEvent(message);
  });
</script>

<div />"
`;

exports[`Svelte > jsx > Javascript Test > Basic Outputs Meta 1`] = `
"<script>
  import { onMount } from \\"svelte\\";

  export let onMessage;
  export let onEvent;
  export let message;

  let name = \\"PatrickJS\\";

  onMount(() => {
    onMessage(name);
    onEvent(message);
  });
</script>

<div />"
`;

exports[`Svelte > jsx > Javascript Test > BasicAttribute 1`] = `"<input autocapitalize=\\"on\\" autocomplete=\\"on\\" spellcheck={true} />"`;

exports[`Svelte > jsx > Javascript Test > BasicBooleanAttribute 1`] = `
"<script>
  import MyBooleanAttributeComponent from \\"./basic-boolean-attribute-component.raw\\";

  export let type;
</script>

<div>
  <div _text=\\"\\" />
  <slot />
  <div _text=\\"\\" />
  {type}
  <div _text=\\"\\" />
  <MyBooleanAttributeComponent toggle={true} />
  <div _text=\\"\\" />
  <MyBooleanAttributeComponent toggle={true} />
  <div _text=\\"\\" />
  <MyBooleanAttributeComponent list={null} />
  <div _text=\\"\\" />
</div>"
`;

exports[`Svelte > jsx > Javascript Test > BasicChildComponent 1`] = `
"<script>
  import MyBasicComponent from \\"./basic.raw\\";
  import MyBasicOnMountUpdateComponent from \\"./basic-onMount-update.raw\\";

  let name = \\"Steve\\";
  let dev = \\"PatrickJS\\";
</script>

<div>
  <div _text=\\"\\" />
  <MyBasicComponent id={dev} />
  <div _text=\\"\\" />
  <div>
    <div _text=\\"\\" />
    <MyBasicOnMountUpdateComponent hi={name} bye={dev} />
    <div _text=\\"\\" />
  </div>
  <div _text=\\"\\" />
</div>"
`;

exports[`Svelte > jsx > Javascript Test > BasicFor 1`] = `
"unknown: Missing semicolon. (1:11)

> 1 | let _ = ! I can run in Qwik, Web Component, React, Vue, Solid, or Liquid!
    |            ^
  2 |           "
`;

exports[`Svelte > jsx > Javascript Test > BasicRef 1`] = `
"unknown: Missing semicolon. (2:18)

  1 | let _ = 
> 2 |             Choose a car:
    |                   ^
  3 |           "
`;

exports[`Svelte > jsx > Javascript Test > BasicRefAssignment 1`] = `
"<script>
  function handlerClick(event) {
    event.preventDefault();
    console.log(\\"current value\\", holdValueRef);
    holdValueRef = holdValueRef + \\"JS\\";
  }
</script>

<div>
  <div _text=\\"\\" />
  <button
    on:click={(evt) => {
      handlerClick(evt);
    }}>Click</button
  >
  <div _text=\\"\\" />
</div>"
`;

exports[`Svelte > jsx > Javascript Test > BasicRefPrevious 1`] = `
"unknown: Missing semicolon. (2:11)

  1 | let _ = 
> 2 |         Now: 
    |            ^"
`;

exports[`Svelte > jsx > Javascript Test > Button 1`] = `
"<script>
  export let link;
  export let attributes;
  export let openLinkInNewTab;
  export let text;
</script>

<div>
  <div _text=\\"\\" />
  {#if link}
    <div _text=\\"\\" />
    <a
      {...attributes}
      href={link}
      target={openLinkInNewTab ? \\"_blank\\" : undefined}
      ><div _text=\\"\\" />
      {text}
      <div _text=\\"\\" /></a
    >
    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
  {#if !link}
    <div _text=\\"\\" />
    <button type=\\"button\\" {...attributes}
      ><div _text=\\"\\" />
      {text}
      <div _text=\\"\\" /></button
    >
    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
</div>"
`;

exports[`Svelte > jsx > Javascript Test > Columns 1`] = `
"<script>
  export let columns;
  export let space;

  function getColumns() {
    return columns || [];
  }

  function getGutterSize() {
    return typeof space === \\"number\\" ? space || 0 : 20;
  }

  function getWidth(index) {
    const columns = getColumns();
    return (columns[index] && columns[index].width) || 100 / columns.length;
  }

  function getColumnCssWidth(index) {
    const columns = getColumns();
    const gutterSize = getGutterSize();
    const subtractWidth = (gutterSize * (columns.length - 1)) / columns.length;
    return \`calc(\${getWidth(index)}% - \${subtractWidth}px)\`;
  }
</script>

<div class=\\"builder - columns div\\">
  <div _text=\\"\\" />
  {#each columns as column, index}
    <div class=\\"builder - column div-2\\">
      <div _text=\\"\\" />
      {column.content}
      <div _text=\\"\\" />
      {index}
      <div _text=\\"\\" />
    </div>
  {/each}
  <div _text=\\"\\" />
</div>

<style>
  .div {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    line-height: normal;
  }
  @media (max-width: 999px) {
    .div {
      flex-direction: row;
    }
  }
  @media (max-width: 639px) {
    .div {
      flex-direction: row-reverse;
    }
  }
  .div-2 {
    flex-grow: 1;
  }
</style>"
`;

exports[`Svelte > jsx > Javascript Test > CustomCode 1`] = `
"<script>
  import { onMount } from \\"svelte\\";

  export let replaceNodes;
  export let code;

  function findAndRunScripts() {
    // TODO: Move this function to standalone one in '@builder.io/utils'
    if (elem && typeof window !== \\"undefined\\") {
      /** @type {HTMLScriptElement[]} */
      const scripts = elem.getElementsByTagName(\\"script\\");

      for (let i = 0; i < scripts.length; i++) {
        const script = scripts[i];

        if (script.src) {
          if (scriptsInserted.includes(script.src)) {
            continue;
          }

          scriptsInserted.push(script.src);
          const newScript = document.createElement(\\"script\\");
          newScript.async = true;
          newScript.src = script.src;
          document.head.appendChild(newScript);
        } else if (
          !script.type ||
          [
            \\"text/javascript\\",
            \\"application/javascript\\",
            \\"application/ecmascript\\",
          ].includes(script.type)
        ) {
          if (scriptsRun.includes(script.innerText)) {
            continue;
          }

          try {
            scriptsRun.push(script.innerText);
            new Function(script.innerText)();
          } catch (error) {
            console.warn(\\"\`CustomCode\`: Error running script:\\", error);
          }
        }
      }
    }
  }

  let elem;

  let scriptsInserted = [];
  let scriptsRun = [];

  onMount(() => {
    findAndRunScripts();
  });
</script>

<div
  bind:this={elem}
  class={\\"builder-custom-code\\" + (replaceNodes ? \\" replace-nodes\\" : \\"\\")}
>
  {@html code}
</div>"
`;

exports[`Svelte > jsx > Javascript Test > Embed 1`] = `
"<script>
  import { onMount } from \\"svelte\\";

  export let replaceNodes;
  export let code;

  function findAndRunScripts() {
    // TODO: Move this function to standalone one in '@builder.io/utils'
    if (elem && typeof window !== \\"undefined\\") {
      /** @type {HTMLScriptElement[]} */
      const scripts = elem.getElementsByTagName(\\"script\\");

      for (let i = 0; i < scripts.length; i++) {
        const script = scripts[i];

        if (script.src) {
          if (scriptsInserted.includes(script.src)) {
            continue;
          }

          scriptsInserted.push(script.src);
          const newScript = document.createElement(\\"script\\");
          newScript.async = true;
          newScript.src = script.src;
          document.head.appendChild(newScript);
        } else if (
          !script.type ||
          [
            \\"text/javascript\\",
            \\"application/javascript\\",
            \\"application/ecmascript\\",
          ].includes(script.type)
        ) {
          if (scriptsRun.includes(script.innerText)) {
            continue;
          }

          try {
            scriptsRun.push(script.innerText);
            new Function(script.innerText)();
          } catch (error) {
            console.warn(\\"\`CustomCode\`: Error running script:\\", error);
          }
        }
      }
    }
  }

  let elem;

  let scriptsInserted = [];
  let scriptsRun = [];

  onMount(() => {
    findAndRunScripts();
  });
</script>

<div
  bind:this={elem}
  class={\\"builder-custom-code\\" + (replaceNodes ? \\" replace-nodes\\" : \\"\\")}
>
  {@html code}
</div>"
`;

exports[`Svelte > jsx > Javascript Test > Form 1`] = `
"<script>
  import { BuilderBlock as BuilderBlockComponent } from \\"@fake\\";
  import { Builder, builder } from \\"@builder.io/sdk\\";
  import { BuilderBlocks } from \\"@fake\\";
  import { set } from \\"@fake\\";
  import { get } from \\"@fake\\";

  export let previewState;
  export let sendWithJs;
  export let sendSubmissionsTo;
  export let action;
  export let customHeaders;
  export let contentType;
  export let sendSubmissionsToEmail;
  export let name;
  export let method;
  export let errorMessagePath;
  export let resetFormOnSubmit;
  export let successUrl;
  export let validate;
  export let attributes;
  export let builderBlock;
  export let errorMessage;
  export let sendingMessage;
  export let successMessage;

  function onSubmit(event) {
    const sendWithJs = sendWithJs || sendSubmissionsTo === \\"email\\";

    if (sendSubmissionsTo === \\"zapier\\") {
      event.preventDefault();
    } else if (sendWithJs) {
      if (!(action || sendSubmissionsTo === \\"email\\")) {
        event.preventDefault();
        return;
      }

      event.preventDefault();
      const el = event.currentTarget;
      const headers = customHeaders || {};
      let body;
      const formData = new FormData(el); // TODO: maybe support null

      const formPairs = Array.from(
        event.currentTarget.querySelectorAll(\\"input,select,textarea\\")
      )
        .filter((el) => !!el.name)
        .map((el) => {
          let value;
          const key = el.name;

          if (el instanceof HTMLInputElement) {
            if (el.type === \\"radio\\") {
              if (el.checked) {
                value = el.name;
                return {
                  key,
                  value,
                };
              }
            } else if (el.type === \\"checkbox\\") {
              value = el.checked;
            } else if (el.type === \\"number\\" || el.type === \\"range\\") {
              const num = el.valueAsNumber;

              if (!isNaN(num)) {
                value = num;
              }
            } else if (el.type === \\"file\\") {
              // TODO: one vs multiple files
              value = el.files;
            } else {
              value = el.value;
            }
          } else {
            value = el.value;
          }

          return {
            key,
            value,
          };
        });
      let contentType = contentType;

      if (sendSubmissionsTo === \\"email\\") {
        contentType = \\"multipart/form-data\\";
      }

      Array.from(formPairs).forEach(({ value }) => {
        if (
          value instanceof File ||
          (Array.isArray(value) && value[0] instanceof File) ||
          value instanceof FileList
        ) {
          contentType = \\"multipart/form-data\\";
        }
      }); // TODO: send as urlEncoded or multipart by default
      // because of ease of use and reliability in browser API
      // for encoding the form?

      if (contentType !== \\"application/json\\") {
        body = formData;
      } else {
        // Json
        const json = {};
        Array.from(formPairs).forEach(({ value, key }) => {
          set(json, key, value);
        });
        body = JSON.stringify(json);
      }

      if (contentType && contentType !== \\"multipart/form-data\\") {
        if (
          /* Zapier doesn't allow content-type header to be sent from browsers */
          !(sendWithJs && action?.includes(\\"zapier.com\\"))
        ) {
          headers[\\"content-type\\"] = contentType;
        }
      }

      const presubmitEvent = new CustomEvent(\\"presubmit\\", {
        detail: {
          body,
        },
      });

      if (formRef) {
        formRef.dispatchEvent(presubmitEvent);

        if (presubmitEvent.defaultPrevented) {
          return;
        }
      }

      formState = \\"sending\\";
      const formUrl = \`\${
        builder.env === \\"dev\\" ? \\"http://localhost:5000\\" : \\"https://builder.io\\"
      }/api/v1/form-submit?apiKey=\${builder.apiKey}&to=\${btoa(
        sendSubmissionsToEmail || \\"\\"
      )}&name=\${encodeURIComponent(name || \\"\\")}\`;
      fetch(
        sendSubmissionsTo === \\"email\\" ? formUrl : action,
        /* TODO: throw error if no action URL */
        {
          body,
          headers,
          method: method || \\"post\\",
        }
      ).then(
        async (res) => {
          let body;
          const contentType = res.headers.get(\\"content-type\\");

          if (contentType && contentType.indexOf(\\"application/json\\") !== -1) {
            body = await res.json();
          } else {
            body = await res.text();
          }

          if (!res.ok && errorMessagePath) {
            /* TODO: allow supplying an error formatter function */
            let message = get(body, errorMessagePath);

            if (message) {
              if (typeof message !== \\"string\\") {
                /* TODO: ideally convert json to yaml so it woul dbe like
           error: - email has been taken */
                message = JSON.stringify(message);
              }

              formErrorMessage = message;
            }
          }

          responseData = body;
          formState = res.ok ? \\"success\\" : \\"error\\";

          if (res.ok) {
            const submitSuccessEvent = new CustomEvent(\\"submit:success\\", {
              detail: {
                res,
                body,
              },
            });

            if (formRef) {
              formRef.dispatchEvent(submitSuccessEvent);

              if (submitSuccessEvent.defaultPrevented) {
                return;
              }
              /* TODO: option to turn this on/off? */

              if (resetFormOnSubmit !== false) {
                formRef.reset();
              }
            }
            /* TODO: client side route event first that can be preventDefaulted */

            if (successUrl) {
              if (formRef) {
                const event = new CustomEvent(\\"route\\", {
                  detail: {
                    url: successUrl,
                  },
                });
                formRef.dispatchEvent(event);

                if (!event.defaultPrevented) {
                  location.href = successUrl;
                }
              } else {
                location.href = successUrl;
              }
            }
          }
        },
        (err) => {
          const submitErrorEvent = new CustomEvent(\\"submit:error\\", {
            detail: {
              error: err,
            },
          });

          if (formRef) {
            formRef.dispatchEvent(submitErrorEvent);

            if (submitErrorEvent.defaultPrevented) {
              return;
            }
          }

          responseData = err;
          formState = \\"error\\";
        }
      );
    }
  }
  $: submissionState = () => {
    return (Builder.isEditing && previewState) || formState;
  };

  let formRef;

  let formState = \\"unsubmitted\\";
  let responseData = null;
  let formErrorMessage = \\"\\";
</script>

<form
  {validate}
  bind:this={formRef}
  action={!sendWithJs && action}
  {method}
  {name}
  on:submit={(event) => {
    onSubmit(event);
  }}
  {...attributes}
>
  <div _text=\\"\\" />
  {#if builderBlock && builderBlock.children}
    <div _text=\\"\\" />

    {#each builderBlock?.children as block, index (block.id)}
      <BuilderBlockComponent {block} {index} />
    {/each}

    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
  {#if submissionState() === \\"error\\"}
    <div _text=\\"\\" />
    <BuilderBlocks dataPath=\\"errorMessage\\" blocks={errorMessage} />
    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
  {#if submissionState() === \\"sending\\"}
    <div _text=\\"\\" />
    <BuilderBlocks dataPath=\\"sendingMessage\\" blocks={sendingMessage} />
    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
  {#if submissionState() === \\"error\\" && responseData}
    <div _text=\\"\\" />
    <pre class=\\"builder - form - error - text pre\\"><div
        _text=\\"\\"
      />{JSON.stringify(responseData, null, 2)}<div _text=\\"\\" /></pre>
    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
  {#if submissionState() === \\"success\\"}
    <div _text=\\"\\" />
    <BuilderBlocks dataPath=\\"successMessage\\" blocks={successMessage} />
    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
</form>

<style>
  .pre {
    padding: 10px;
    color: red;
    text-align: center;
  }
</style>"
`;

exports[`Svelte > jsx > Javascript Test > Image 1`] = `
"<script>
  import { onDestroy, onMount } from \\"svelte\\";

  export let lazy;
  export let altText;
  export let _class;
  export let image;
  export let srcset;
  export let sizes;

  function setLoaded() {
    imageLoaded = true;
  }

  function useLazyLoading() {
    // TODO: Add more checks here, like testing for real web browsers
    return !!lazy && isBrowser();
  }

  function isBrowser() {
    return (
      typeof window !== \\"undefined\\" && window.navigator.product != \\"ReactNative\\"
    );
  }

  let pictureRef;

  let scrollListener = null;
  let imageLoaded = false;
  let load = false;

  onMount(() => {
    if (useLazyLoading()) {
      // throttled scroll capture listener
      const listener = () => {
        if (pictureRef) {
          const rect = pictureRef.getBoundingClientRect();
          const buffer = window.innerHeight / 2;

          if (rect.top < window.innerHeight + buffer) {
            setLoad(true);
            scrollListener = null;
            window.removeEventListener(\\"scroll\\", listener);
          }
        }
      };

      scrollListener = listener;
      window.addEventListener(\\"scroll\\", listener, {
        capture: true,
        passive: true,
      });
      listener();
    }
  });

  onDestroy(() => {
    if (scrollListener) {
      window.removeEventListener(\\"scroll\\", scrollListener);
    }
  });
</script>

<div>
  <div _text=\\"\\" />
  <picture bind:this={pictureRef}
    ><div _text=\\"\\" />
    {#if !useLazyLoading() || load}
      <div _text=\\"\\" />
      <img
        alt={altText}
        aria-role={altText ? \\"presentation\\" : undefined}
        class={\\"builder-image\\" + (_class ? \\" \\" + _class : \\"\\") + \\" img\\"}
        src={image}
        on:load={(event) => {
          setLoaded();
        }}
        {srcset}
        {sizes}
      />
      <div _text=\\"\\" />
    {/if}
    <div _text=\\"\\" />
    <source {srcset} />
    <div _text=\\"\\" /></picture
  >
  <div _text=\\"\\" />
  <slot />
  <div _text=\\"\\" />
</div>

<style>
  .img {
    opacity: 1;
    transition: opacity 0.2s ease-in-out;
    object-fit: cover;
    object-position: center;
  }
</style>"
`;

exports[`Svelte > jsx > Javascript Test > Image State 1`] = `
"unknown: Unexpected token, expected \\"{\\" (1:20)

> 1 | let _ = custom-class
    |                     ^"
`;

exports[`Svelte > jsx > Javascript Test > Img 1`] = `
"<script>
  import { Builder } from \\"@builder.io/sdk\\";

  export let backgroundSize;
  export let backgroundPosition;
  export let attributes;
  export let imgSrc;
  export let altText;

  function mitosis_styling(node, vars) {
    Object.entries(vars || {}).forEach(([p, v]) => {
      if (p.startsWith(\\"--\\")) {
        node.style.setProperty(p, v);
      } else {
        node.style[p] = v;
      }
    });
  }
</script>

<img
  use:mitosis_styling={{
    objectFit: backgroundSize || \\"cover\\",
    objectPosition: backgroundPosition || \\"center\\",
  }}
  {...attributes}
  key={(Builder.isEditing && imgSrc) || \\"default-key\\"}
  alt={altText}
  src={imgSrc}
/>"
`;

exports[`Svelte > jsx > Javascript Test > Input 1`] = `
"<script>
  import { Builder } from \\"@builder.io/sdk\\";

  export let attributes;
  export let defaultValue;
  export let placeholder;
  export let type;
  export let name;
  export let value;
  export let required;
</script>

<input
  {...attributes}
  key={Builder.isEditing && defaultValue ? defaultValue : \\"default-key\\"}
  {placeholder}
  {type}
  {name}
  {value}
  {defaultValue}
  {required}
/>"
`;

exports[`Svelte > jsx > Javascript Test > RawText 1`] = `
"<script>
  export let attributes;
  export let text;
</script>

<span class={attributes?.class || attributes?.className}
  >{@html text || \\"\\"}</span
>"
`;

exports[`Svelte > jsx > Javascript Test > Section 1`] = `
"<script>
  export let attributes;
  export let maxWidth;

  function mitosis_styling(node, vars) {
    Object.entries(vars || {}).forEach(([p, v]) => {
      if (p.startsWith(\\"--\\")) {
        node.style.setProperty(p, v);
      } else {
        node.style[p] = v;
      }
    });
  }
</script>

<section
  use:mitosis_styling={maxWidth && typeof maxWidth === \\"number\\"
    ? {
        maxWidth: maxWidth,
      }
    : undefined}
  {...attributes}
>
  <div _text=\\"\\" />
  <slot />
  <div _text=\\"\\" />
</section>"
`;

exports[`Svelte > jsx > Javascript Test > Section 2`] = `
"<script>
  export let attributes;

  function mitosis_styling(node, vars) {
    Object.entries(vars || {}).forEach(([p, v]) => {
      if (p.startsWith(\\"--\\")) {
        node.style.setProperty(p, v);
      } else {
        node.style[p] = v;
      }
    });
  }

  let max = 42;
  let items = [42];
</script>

{#if max}
  <div _text=\\"\\" />

  {#each items as item}
    <section
      use:mitosis_styling={{
        maxWidth: item + max,
      }}
      {...attributes}
    >
      <div _text=\\"\\" />
      <slot />
      <div _text=\\"\\" />
    </section>
  {/each}

  <div _text=\\"\\" />
{/if}"
`;

exports[`Svelte > jsx > Javascript Test > Select 1`] = `
"<script>
  import { Builder } from \\"@builder.io/sdk\\";

  export let attributes;
  export let value;
  export let defaultValue;
  export let name;
  export let options;
</script>

<select
  {...attributes}
  {value}
  key={Builder.isEditing && defaultValue ? defaultValue : \\"default-key\\"}
  {defaultValue}
  {name}
  ><div _text=\\"\\" />
  {#each options as option, index}
    <option value={option.value} data-index={index}
      ><div _text=\\"\\" />
      {option.name || option.value}
      <div _text=\\"\\" /></option
    >
  {/each}
  <div _text=\\"\\" /></select
>"
`;

exports[`Svelte > jsx > Javascript Test > Stamped.io 1`] = `
"unknown: Missing semicolon. (1:13)

> 1 | let _ = Write a review
    |              ^"
`;

exports[`Svelte > jsx > Javascript Test > Submit 1`] = `
"<script>
  export let attributes;
  export let text;
</script>

<button type=\\"submit\\" {...attributes}
  ><div _text=\\"\\" />
  {text}
  <div _text=\\"\\" /></button
>"
`;

exports[`Svelte > jsx > Javascript Test > Text 1`] = `
"<script>
  import { Builder } from \\"@builder.io/sdk\\";

  export let text;
  export let content;

  let name = \\"Decadef20\\";
</script>

<div
  contentEditable={allowEditingText || undefined}
  data-name={{
    test: name || \\"any name\\",
  }}
>
  {@html text || content || name || '<p class=\\"text-lg\\">my name</p>'}
</div>"
`;

exports[`Svelte > jsx > Javascript Test > Textarea 1`] = `
"<script>
  export let attributes;
  export let placeholder;
  export let name;
  export let value;
  export let defaultValue;
</script>

<textarea {...attributes} {placeholder} {name} {value} {defaultValue} />"
`;

exports[`Svelte > jsx > Javascript Test > Video 1`] = `
"<script>
  export let attributes;
  export let fit;
  export let position;
  export let video;
  export let posterImage;
  export let autoPlay;
  export let muted;
  export let controls;
  export let loop;

  function mitosis_styling(node, vars) {
    Object.entries(vars || {}).forEach(([p, v]) => {
      if (p.startsWith(\\"--\\")) {
        node.style.setProperty(p, v);
      } else {
        node.style[p] = v;
      }
    });
  }
</script>

<video
  use:mitosis_styling={{
    width: \\"100%\\",
    height: \\"100%\\",
    ...attributes?.style,
    objectFit: fit,
    objectPosition: position,
    // Hack to get object fit to work as expected and
    // not have the video overflow
    borderRadius: 1,
  }}
  preload=\\"none\\"
  {...attributes}
  key={video || \\"no-src\\"}
  poster={posterImage}
  autoplay={autoPlay}
  {muted}
  {controls}
  {loop}
/>"
`;

exports[`Svelte > jsx > Javascript Test > arrowFunctionInUseStore 1`] = `
"<script>
  function setName(value) {
    name = value;
  }

  function updateNameWithArrowFn(value) {
    name = value;
  }

  let name = \\"steve\\";
</script>

<div>Hello{name}</div>"
`;

exports[`Svelte > jsx > Javascript Test > basicForwardRef 1`] = `
"<script>
  export let inputRef;

  let inputRef;

  let name = \\"PatrickJS\\";
</script>

<div>
  <div _text=\\"\\" />
  <input class=\\"input\\" bind:this={inputRef} bind:value={name} />
  <div _text=\\"\\" />
</div>

<style>
  .input {
    color: red;
  }
</style>"
`;

exports[`Svelte > jsx > Javascript Test > basicForwardRefMetadata 1`] = `
"<script>
  export let inputRef;

  let inputRef;

  let name = \\"PatrickJS\\";
</script>

<div>
  <div _text=\\"\\" />
  <input class=\\"input\\" bind:this={inputRef} bind:value={name} />
  <div _text=\\"\\" />
</div>

<style>
  .input {
    color: red;
  }
</style>"
`;

exports[`Svelte > jsx > Javascript Test > basicOnUpdateReturn 1`] = `
"<script>
  let name = \\"PatrickJS\\";

  function onUpdateFn_0() {
    const controller = new AbortController();
    const signal = controller.signal;
    fetch(\\"https://patrickjs.com/api/resource.json\\", {
      signal,
    })
      .then((response) => response.json())
      .then((data) => {
        name = data.name;
      });
    return () => {
      if (!signal.aborted) {
        controller.abort();
      }
    };
  }
  $: onUpdateFn_0(...[name]);
</script>

<div>Hello{name}</div>"
`;

exports[`Svelte > jsx > Javascript Test > class + ClassName + css 1`] = `
"unknown: Missing semicolon. (1:13)

> 1 | let _ = test2 test
    |              ^"
`;

exports[`Svelte > jsx > Javascript Test > class + css 1`] = `
"unknown: Missing semicolon. (2:12)

  1 | let _ = 
> 2 |       Hello! I can run in React, Vue, Solid, or Liquid!
    |             ^
  3 |     "
`;

exports[`Svelte > jsx > Javascript Test > className + css 1`] = `
"unknown: Missing semicolon. (2:12)

  1 | let _ = 
> 2 |       Hello! I can run in React, Vue, Solid, or Liquid!
    |             ^
  3 |     "
`;

exports[`Svelte > jsx > Javascript Test > className 1`] = `
"unknown: Missing semicolon. (1:10)

> 1 | let _ = no binding
    |           ^"
`;

exports[`Svelte > jsx > Javascript Test > componentWithContext 1`] = `
"<script>
  import { getContext, setContext } from \\"svelte\\";

  import Context1 from \\"@dummy/1\\";
  import Context2 from \\"@dummy/2\\";

  export let content;

  let foo = getContext(Context1.key);
  setContext(Context1.key, {
    foo: \\"bar\\",

    content() {
      return content;
    },
  });
  setContext(Context2.key, {
    bar: \\"baz\\",
  });
</script>

<div _text=\\"\\" />
{foo.value}
<div _text=\\"\\" />"
`;

exports[`Svelte > jsx > Javascript Test > contentState 1`] = `
"unknown: Missing semicolon. (1:15)

> 1 | let _ = setting context
    |                ^"
`;

exports[`Svelte > jsx > Javascript Test > defaultProps 1`] = `
"<script>
  export let link = \\"https://builder.io/\\";
  export let attributes;
  export let openLinkInNewTab = false;
  export let text = \\"default text\\";
</script>

<div>
  <div _text=\\"\\" />
  {#if link}
    <div _text=\\"\\" />
    <a
      {...attributes}
      href={link}
      target={openLinkInNewTab ? \\"_blank\\" : undefined}
      ><div _text=\\"\\" />
      {text}
      <div _text=\\"\\" /></a
    >
    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
  {#if !link}
    <div _text=\\"\\" />
    <button type=\\"button\\" {...attributes}
      ><div _text=\\"\\" />
      {text}
      <div _text=\\"\\" /></button
    >
    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
</div>"
`;

exports[`Svelte > jsx > Javascript Test > defaultPropsOutsideComponent 1`] = `
"<script>
  export let link = \\"https://builder.io/\\";
  export let attributes;
  export let openLinkInNewTab = false;
  export let text = \\"default text\\";
</script>

<div>
  <div _text=\\"\\" />
  {#if link}
    <div _text=\\"\\" />
    <a
      {...attributes}
      href={link}
      target={openLinkInNewTab ? \\"_blank\\" : undefined}
      ><div _text=\\"\\" />
      {text}
      <div _text=\\"\\" /></a
    >
    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
  {#if !link}
    <div _text=\\"\\" />
    <button type=\\"button\\" {...attributes}
      ><div _text=\\"\\" />
      {text}
      <div _text=\\"\\" /></button
    >
    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
</div>"
`;

exports[`Svelte > jsx > Javascript Test > defaultValsWithTypes 1`] = `
"<script>
  const DEFAULT_VALUES: Props = {
    name: \\"Sami\\",
  };

  export let name;
</script>

<div>Hello{name || DEFAULT_VALUES.name}</div>"
`;

exports[`Svelte > jsx > Javascript Test > expressionState 1`] = `
"<script>
  export let componentRef;

  let refToUse = !(componentRef instanceof Function) ? componentRef : null;
</script>

<div>{refToUse}</div>"
`;

exports[`Svelte > jsx > Javascript Test > import types 1`] = `
"<script>
  import RenderBlock from \\"./builder-render-block.raw\\";

  export let renderContentProps;

  function getRenderContentProps(block, index) {
    return {
      block: block,
      index: index,
    };
  }
</script>

<RenderBlock {...getRenderContentProps(renderContentProps.block, 0)} />"
`;

exports[`Svelte > jsx > Javascript Test > multipleOnUpdate 1`] = `
"<script>
  import { afterUpdate } from \\"svelte\\";

  afterUpdate(() => {
    console.log(\\"Runs on every update/rerender\\");
  });
  afterUpdate(() => {
    console.log(\\"Runs on every update/rerender as well\\");
  });
</script>

<div />"
`;

exports[`Svelte > jsx > Javascript Test > multipleOnUpdateWithDeps 1`] = `
"<script>
  let a = \\"a\\";
  let b = \\"b\\";
  let c = \\"c\\";
  let d = \\"d\\";

  function onUpdateFn_0() {
    console.log(\\"Runs when a or b changes\\", a, b);

    if (a === \\"a\\") {
      a = \\"b\\";
    }
  }
  $: onUpdateFn_0(...[a, b]);
  function onUpdateFn_1() {
    console.log(\\"Runs when c or d changes\\", c, d);

    if (a === \\"a\\") {
      a = \\"b\\";
    }
  }
  $: onUpdateFn_1(...[c, d]);
</script>

<div />"
`;

exports[`Svelte > jsx > Javascript Test > multipleSpreads 1`] = `"unknown: Maximum call stack size exceeded"`;

exports[`Svelte > jsx > Javascript Test > nestedShow 1`] = `
"unknown: Unexpected token (1:8)

> 1 | let _ = else-condition-A
    |         ^"
`;

exports[`Svelte > jsx > Javascript Test > nestedStyles 1`] = `
"unknown: Missing semicolon. (2:11)

  1 | let _ = 
> 2 |       Hello world
    |            ^
  3 |     "
`;

exports[`Svelte > jsx > Javascript Test > onInit & onMount 1`] = `
"<script>
  import { onMount } from \\"svelte\\";

  console.log(\\"onInit\\");

  onMount(() => {
    console.log(\\"onMount\\");
  });
</script>

<div />"
`;

exports[`Svelte > jsx > Javascript Test > onInit 1`] = `
"unknown: Missing semicolon. (1:15)

> 1 | let _ = Default name defined by parent 
    |                ^"
`;

exports[`Svelte > jsx > Javascript Test > onMount 1`] = `
"<script>
  import { onDestroy, onMount } from \\"svelte\\";

  onMount(() => {
    console.log(\\"Runs on mount\\");
  });

  onDestroy(() => {
    console.log(\\"Runs on unMount\\");
  });
</script>

<div />"
`;

exports[`Svelte > jsx > Javascript Test > onUpdate 1`] = `
"<script>
  import { afterUpdate } from \\"svelte\\";

  afterUpdate(() => {
    console.log(\\"Runs on every update/rerender\\");
  });
</script>

<div />"
`;

exports[`Svelte > jsx > Javascript Test > onUpdateWithDeps 1`] = `
"<script>
  export let size;

  let a = \\"a\\";
  let b = \\"b\\";

  function onUpdateFn_0() {
    console.log(\\"Runs when a, b or size changes\\", a, b, size);
  }
  $: onUpdateFn_0(...[a, b, size]);
</script>

<div />"
`;

exports[`Svelte > jsx > Javascript Test > preserveExportOrLocalStatement 1`] = `
"<script>
  const b = 3;
  const foo = () => {};
  export const a = 3;
  export const bar = () => {};
  export function run<T>(value: T) {}
</script>

<div />"
`;

exports[`Svelte > jsx > Javascript Test > preserveTyping 1`] = `
"unknown: Missing semicolon. (1:14)

> 1 | let _ = Hello! I can run in React, Vue, Solid, or Liquid! 
    |               ^"
`;

exports[`Svelte > jsx > Javascript Test > propsDestructure 1`] = `
"unknown: Missing semicolon. (2:12)

  1 | let _ = 
> 2 |       Hello! I can run in React, Vue, Solid, or Liquid!
    |             ^
  3 |     "
`;

exports[`Svelte > jsx > Javascript Test > propsInterface 1`] = `
"unknown: Missing semicolon. (1:14)

> 1 | let _ = Hello! I can run in React, Vue, Solid, or Liquid! 
    |               ^"
`;

exports[`Svelte > jsx > Javascript Test > propsType 1`] = `
"unknown: Missing semicolon. (1:14)

> 1 | let _ = Hello! I can run in React, Vue, Solid, or Liquid! 
    |               ^"
`;

exports[`Svelte > jsx > Javascript Test > renderContentExample 1`] = `
"<script>
  import { onMount, setContext } from \\"svelte\\";

  import {
    sendComponentsToVisualEditor,
    dispatchNewContentToVisualEditor,
    trackClick,
  } from \\"@dummy/injection-js\\";
  import BuilderContext from \\"@dummy/context.svelte\\";
  import RenderBlocks from \\"@dummy/RenderBlocks.lite.tsx\\";

  export let content;
  export let customComponents;

  setContext(BuilderContext.key, {
    get content() {
      return 3;
    },

    get registeredComponents() {
      return 4;
    },
  });

  onMount(() => {
    sendComponentsToVisualEditor(customComponents);
  });

  function onUpdateFn_0() {
    dispatchNewContentToVisualEditor(content);
  }
  $: onUpdateFn_0(...[content]);
</script>

<div
  class=\\"div\\"
  on:click={(event) => {
    trackClick(content.id);
  }}
>
  <div _text=\\"\\" />
  <RenderBlocks blocks={content.blocks} />
  <div _text=\\"\\" />
</div>

<style>
  .div {
    display: flex;
    flex-direction: columns;
  }
</style>"
`;

exports[`Svelte > jsx > Javascript Test > rootFragmentMultiNode 1`] = `
"<script>
  export let link;
  export let attributes;
  export let openLinkInNewTab;
  export let text;
</script>

<div _text=\\"\\" />

{#if link}
  <div _text=\\"\\" />
  <a
    {...attributes}
    href={link}
    target={openLinkInNewTab ? \\"_blank\\" : undefined}
    ><div _text=\\"\\" />
    {text}
    <div _text=\\"\\" /></a
  >
  <div _text=\\"\\" />
{/if}
<div _text=\\"\\" />

{#if !link}
  <div _text=\\"\\" />
  <button type=\\"button\\" {...attributes}
    ><div _text=\\"\\" />
    {text}
    <div _text=\\"\\" /></button
  >
  <div _text=\\"\\" />
{/if}
<div _text=\\"\\" />"
`;

exports[`Svelte > jsx > Javascript Test > rootShow 1`] = `
"<script>
  export let foo;
</script>

{#if foo === \\"bar\\"}
  <div _text=\\"\\" />
  <div>Bar</div>
  <div _text=\\"\\" />
{:else}
  <div>Foo</div>
{/if}"
`;

exports[`Svelte > jsx > Javascript Test > self-referencing component 1`] = `
"unknown: Missing semicolon. (1:13)

> 1 | let _ = Bruce Wayne
    |              ^"
`;

exports[`Svelte > jsx > Javascript Test > self-referencing component with children 1`] = `
"<script>
  export let name;
</script>

<div>
  <div _text=\\"\\" />
  {name}
  <div _text=\\"\\" />
  <slot />
  <div _text=\\"\\" />
  {#if name === \\"Batman\\"}
    <div _text=\\"\\" />
    <svelte:self name=\\"Bruce\\"
      ><div _text=\\"\\" />
      <div>Wayne</div>
      <div _text=\\"\\" /></svelte:self
    >
    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
</div>"
`;

exports[`Svelte > jsx > Javascript Test > showWithFor 1`] = `
"unknown: Unexpected token (1:8)

> 1 | let _ = else-condition-A
    |         ^"
`;

exports[`Svelte > jsx > Javascript Test > spreadAttrs 1`] = `"<input {...attrs} />"`;

exports[`Svelte > jsx > Javascript Test > spreadNestedProps 1`] = `
"<script>
  export let nested;
</script>

<input {...nested} />"
`;

exports[`Svelte > jsx > Javascript Test > spreadProps 1`] = `"unknown: Maximum call stack size exceeded"`;

exports[`Svelte > jsx > Javascript Test > subComponent 1`] = `
"<script>
  import Foo from \\"./foo-sub-component.svelte\\";
</script>

<Foo />"
`;

exports[`Svelte > jsx > Javascript Test > typeDependency 1`] = `
"<script>
  export let foo;
</script>

<div>{foo}</div>"
`;

exports[`Svelte > jsx > Javascript Test > use-style 1`] = `
"<button type=\\"button\\">Button</button>

<style>
  button {
    background: blue;
    color: white;
    font-size: 12px;
    outline: 1px solid black;
  }
</style>"
`;

exports[`Svelte > jsx > Javascript Test > use-style-and-css 1`] = `
"<button type=\\"button\\" class=\\"button\\">Button</button>

<style>
  .button {
    background: blue;
    color: white;
  }

  button {
    font-size: 12px;
    outline: 1px solid black;
  }
</style>"
`;

exports[`Svelte > jsx > Javascript Test > use-style-outside-component 1`] = `
"<button type=\\"button\\">Button</button>

<style>
  button {
    background: blue;
    color: white;
    font-size: 12px;
    outline: 1px solid black;
  }
</style>"
`;

exports[`Svelte > jsx > Typescript Test > AdvancedRef 1`] = `
"unknown: Missing semicolon. (2:18)

  1 | let _ = 
> 2 |             Choose a car:
    |                   ^
  3 |           "
`;

exports[`Svelte > jsx > Typescript Test > Basic 1`] = `
"unknown: Missing semicolon. (2:12)

  1 | let _ = 
> 2 |       Hello! I can run in React, Vue, Solid, or Liquid!
    |             ^
  3 |     "
`;

exports[`Svelte > jsx > Typescript Test > Basic 2`] = `
"unknown: Missing semicolon. (1:11)

> 1 | let _ = ! I can run in Qwik, Web Component, React, Vue, Solid, or Liquid!
    |            ^
  2 |           "
`;

exports[`Svelte > jsx > Typescript Test > Basic Context 1`] = `
"unknown: Missing semicolon. (2:12)

  1 | let _ = 
> 2 |       Hello! I can run in React, Vue, Solid, or Liquid!
    |             ^
  3 |       "
`;

exports[`Svelte > jsx > Typescript Test > Basic OnMount Update 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  export interface Props {
    hi: string;
    bye: string;
  }
</script>

<script lang=\\"ts\\">
  import { onMount } from \\"svelte\\";

  export let hi: Props[\\"hi\\"];
  export let bye: Props[\\"bye\\"];

  let name = \\"PatrickJS\\";
  let names = [\\"Steve\\", \\"PatrickJS\\"];
  name = \\"PatrickJS onInit\\" + hi;

  onMount(() => {
    name = \\"PatrickJS onMount\\" + bye;
  });
</script>

<div>Hello{name}</div>"
`;

exports[`Svelte > jsx > Typescript Test > Basic Outputs 1`] = `
"<script lang=\\"ts\\">
  import { onMount } from \\"svelte\\";

  export let onMessage;
  export let onEvent;
  export let message;

  let name = \\"PatrickJS\\";

  onMount(() => {
    onMessage(name);
    onEvent(message);
  });
</script>

<div />"
`;

exports[`Svelte > jsx > Typescript Test > Basic Outputs Meta 1`] = `
"<script lang=\\"ts\\">
  import { onMount } from \\"svelte\\";

  export let onMessage;
  export let onEvent;
  export let message;

  let name = \\"PatrickJS\\";

  onMount(() => {
    onMessage(name);
    onEvent(message);
  });
</script>

<div />"
`;

exports[`Svelte > jsx > Typescript Test > BasicAttribute 1`] = `
"<script lang=\\"ts\\">
</script>

<input autocapitalize=\\"on\\" autocomplete=\\"on\\" spellcheck={true} />"
`;

exports[`Svelte > jsx > Typescript Test > BasicBooleanAttribute 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  type Props = {
    children: any;
    type: string;
  };
</script>

<script lang=\\"ts\\">
  import MyBooleanAttributeComponent from \\"./basic-boolean-attribute-component.raw\\";

  export let type: Props[\\"type\\"];
</script>

<div>
  <div _text=\\"\\" />
  <slot />
  <div _text=\\"\\" />
  {type}
  <div _text=\\"\\" />
  <MyBooleanAttributeComponent toggle={true} />
  <div _text=\\"\\" />
  <MyBooleanAttributeComponent toggle={true} />
  <div _text=\\"\\" />
  <MyBooleanAttributeComponent list={null} />
  <div _text=\\"\\" />
</div>"
`;

exports[`Svelte > jsx > Typescript Test > BasicChildComponent 1`] = `
"<script lang=\\"ts\\">
  import MyBasicComponent from \\"./basic.raw\\";
  import MyBasicOnMountUpdateComponent from \\"./basic-onMount-update.raw\\";

  let name = \\"Steve\\";
  let dev = \\"PatrickJS\\";
</script>

<div>
  <div _text=\\"\\" />
  <MyBasicComponent id={dev} />
  <div _text=\\"\\" />
  <div>
    <div _text=\\"\\" />
    <MyBasicOnMountUpdateComponent hi={name} bye={dev} />
    <div _text=\\"\\" />
  </div>
  <div _text=\\"\\" />
</div>"
`;

exports[`Svelte > jsx > Typescript Test > BasicFor 1`] = `
"unknown: Missing semicolon. (1:11)

> 1 | let _ = ! I can run in Qwik, Web Component, React, Vue, Solid, or Liquid!
    |            ^
  2 |           "
`;

exports[`Svelte > jsx > Typescript Test > BasicRef 1`] = `
"unknown: Missing semicolon. (2:18)

  1 | let _ = 
> 2 |             Choose a car:
    |                   ^
  3 |           "
`;

exports[`Svelte > jsx > Typescript Test > BasicRefAssignment 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  export interface Props {
    showInput: boolean;
  }
</script>

<script lang=\\"ts\\">
  function handlerClick(event) {
    event.preventDefault();
    console.log(\\"current value\\", holdValueRef);
    holdValueRef = holdValueRef + \\"JS\\";
  }
</script>

<div>
  <div _text=\\"\\" />
  <button
    on:click={(evt) => {
      handlerClick(evt);
    }}>Click</button
  >
  <div _text=\\"\\" />
</div>"
`;

exports[`Svelte > jsx > Typescript Test > BasicRefPrevious 1`] = `
"unknown: Missing semicolon. (2:11)

  1 | let _ = 
> 2 |         Now: 
    |            ^"
`;

exports[`Svelte > jsx > Typescript Test > Button 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  export interface ButtonProps {
    attributes?: any;
    text?: string;
    link?: string;
    openLinkInNewTab?: boolean;
  }
</script>

<script lang=\\"ts\\">
  export let link: ButtonProps[\\"link\\"];
  export let attributes: ButtonProps[\\"attributes\\"];
  export let openLinkInNewTab: ButtonProps[\\"openLinkInNewTab\\"];
  export let text: ButtonProps[\\"text\\"];
</script>

<div>
  <div _text=\\"\\" />
  {#if link}
    <div _text=\\"\\" />
    <a
      {...attributes}
      href={link}
      target={openLinkInNewTab ? \\"_blank\\" : undefined}
      ><div _text=\\"\\" />
      {text}
      <div _text=\\"\\" /></a
    >
    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
  {#if !link}
    <div _text=\\"\\" />
    <button type=\\"button\\" {...attributes}
      ><div _text=\\"\\" />
      {text}
      <div _text=\\"\\" /></button
    >
    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
</div>"
`;

exports[`Svelte > jsx > Typescript Test > Columns 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  type Column = {
    content: any; // TODO: Implement this when support for dynamic CSS lands

    width?: number;
  };

  export interface ColumnProps {
    columns?: Column[]; // TODO: Implement this when support for dynamic CSS lands

    space?: number; // TODO: Implement this when support for dynamic CSS lands

    stackColumnsAt?: \\"tablet\\" | \\"mobile\\" | \\"never\\"; // TODO: Implement this when support for dynamic CSS lands

    reverseColumnsWhenStacked?: boolean;
  }
</script>

<script lang=\\"ts\\">
  export let columns: ColumnProps[\\"columns\\"];
  export let space: ColumnProps[\\"space\\"];

  function getColumns() {
    return columns || [];
  }

  function getGutterSize() {
    return typeof space === \\"number\\" ? space || 0 : 20;
  }

  function getWidth(index) {
    const columns = getColumns();
    return (columns[index] && columns[index].width) || 100 / columns.length;
  }

  function getColumnCssWidth(index) {
    const columns = getColumns();
    const gutterSize = getGutterSize();
    const subtractWidth = (gutterSize * (columns.length - 1)) / columns.length;
    return \`calc(\${getWidth(index)}% - \${subtractWidth}px)\`;
  }
</script>

<div class=\\"builder - columns div\\">
  <div _text=\\"\\" />
  {#each columns as column, index}
    <div class=\\"builder - column div-2\\">
      <div _text=\\"\\" />
      {column.content}
      <div _text=\\"\\" />
      {index}
      <div _text=\\"\\" />
    </div>
  {/each}
  <div _text=\\"\\" />
</div>

<style>
  .div {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    line-height: normal;
  }
  @media (max-width: 999px) {
    .div {
      flex-direction: row;
    }
  }
  @media (max-width: 639px) {
    .div {
      flex-direction: row-reverse;
    }
  }
  .div-2 {
    flex-grow: 1;
  }
</style>"
`;

exports[`Svelte > jsx > Typescript Test > CustomCode 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  export interface CustomCodeProps {
    code: string;
    replaceNodes?: boolean;
  }
</script>

<script lang=\\"ts\\">
  import { onMount } from \\"svelte\\";

  export let replaceNodes: CustomCodeProps[\\"replaceNodes\\"];
  export let code: CustomCodeProps[\\"code\\"];

  function findAndRunScripts() {
    // TODO: Move this function to standalone one in '@builder.io/utils'
    if (elem && typeof window !== \\"undefined\\") {
      /** @type {HTMLScriptElement[]} */
      const scripts = elem.getElementsByTagName(\\"script\\");

      for (let i = 0; i < scripts.length; i++) {
        const script = scripts[i];

        if (script.src) {
          if (scriptsInserted.includes(script.src)) {
            continue;
          }

          scriptsInserted.push(script.src);
          const newScript = document.createElement(\\"script\\");
          newScript.async = true;
          newScript.src = script.src;
          document.head.appendChild(newScript);
        } else if (
          !script.type ||
          [
            \\"text/javascript\\",
            \\"application/javascript\\",
            \\"application/ecmascript\\",
          ].includes(script.type)
        ) {
          if (scriptsRun.includes(script.innerText)) {
            continue;
          }

          try {
            scriptsRun.push(script.innerText);
            new Function(script.innerText)();
          } catch (error) {
            console.warn(\\"\`CustomCode\`: Error running script:\\", error);
          }
        }
      }
    }
  }

  let elem;

  let scriptsInserted = [];
  let scriptsRun = [];

  onMount(() => {
    findAndRunScripts();
  });
</script>

<div
  bind:this={elem}
  class={\\"builder-custom-code\\" + (replaceNodes ? \\" replace-nodes\\" : \\"\\")}
>
  {@html code}
</div>"
`;

exports[`Svelte > jsx > Typescript Test > Embed 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  export interface CustomCodeProps {
    code: string;
    replaceNodes?: boolean;
  }
</script>

<script lang=\\"ts\\">
  import { onMount } from \\"svelte\\";

  export let replaceNodes: CustomCodeProps[\\"replaceNodes\\"];
  export let code: CustomCodeProps[\\"code\\"];

  function findAndRunScripts() {
    // TODO: Move this function to standalone one in '@builder.io/utils'
    if (elem && typeof window !== \\"undefined\\") {
      /** @type {HTMLScriptElement[]} */
      const scripts = elem.getElementsByTagName(\\"script\\");

      for (let i = 0; i < scripts.length; i++) {
        const script = scripts[i];

        if (script.src) {
          if (scriptsInserted.includes(script.src)) {
            continue;
          }

          scriptsInserted.push(script.src);
          const newScript = document.createElement(\\"script\\");
          newScript.async = true;
          newScript.src = script.src;
          document.head.appendChild(newScript);
        } else if (
          !script.type ||
          [
            \\"text/javascript\\",
            \\"application/javascript\\",
            \\"application/ecmascript\\",
          ].includes(script.type)
        ) {
          if (scriptsRun.includes(script.innerText)) {
            continue;
          }

          try {
            scriptsRun.push(script.innerText);
            new Function(script.innerText)();
          } catch (error) {
            console.warn(\\"\`CustomCode\`: Error running script:\\", error);
          }
        }
      }
    }
  }

  let elem;

  let scriptsInserted = [];
  let scriptsRun = [];

  onMount(() => {
    findAndRunScripts();
  });
</script>

<div
  bind:this={elem}
  class={\\"builder-custom-code\\" + (replaceNodes ? \\" replace-nodes\\" : \\"\\")}
>
  {@html code}
</div>"
`;

exports[`Svelte > jsx > Typescript Test > Form 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  export interface FormProps {
    attributes?: any;
    name?: string;
    action?: string;
    validate?: boolean;
    method?: string;
    builderBlock?: BuilderElement;
    sendSubmissionsTo?: string;
    sendSubmissionsToEmail?: string;
    sendWithJs?: boolean;
    contentType?: string;
    customHeaders?: {
      [key: string]: string;
    };
    successUrl?: string;
    previewState?: FormState;
    successMessage?: BuilderElement[];
    errorMessage?: BuilderElement[];
    sendingMessage?: BuilderElement[];
    resetFormOnSubmit?: boolean;
    errorMessagePath?: string;
  }

  export type FormState = \\"unsubmitted\\" | \\"sending\\" | \\"success\\" | \\"error\\";
</script>

<script lang=\\"ts\\">
  import { BuilderBlock as BuilderBlockComponent } from \\"@fake\\";
  import { Builder, builder } from \\"@builder.io/sdk\\";
  import { BuilderBlocks } from \\"@fake\\";
  import { set } from \\"@fake\\";
  import { get } from \\"@fake\\";

  export let previewState: FormProps[\\"previewState\\"];
  export let sendWithJs: FormProps[\\"sendWithJs\\"];
  export let sendSubmissionsTo: FormProps[\\"sendSubmissionsTo\\"];
  export let action: FormProps[\\"action\\"];
  export let customHeaders: FormProps[\\"customHeaders\\"];
  export let contentType: FormProps[\\"contentType\\"];
  export let sendSubmissionsToEmail: FormProps[\\"sendSubmissionsToEmail\\"];
  export let name: FormProps[\\"name\\"];
  export let method: FormProps[\\"method\\"];
  export let errorMessagePath: FormProps[\\"errorMessagePath\\"];
  export let resetFormOnSubmit: FormProps[\\"resetFormOnSubmit\\"];
  export let successUrl: FormProps[\\"successUrl\\"];
  export let validate: FormProps[\\"validate\\"];
  export let attributes: FormProps[\\"attributes\\"];
  export let builderBlock: FormProps[\\"builderBlock\\"];
  export let errorMessage: FormProps[\\"errorMessage\\"];
  export let sendingMessage: FormProps[\\"sendingMessage\\"];
  export let successMessage: FormProps[\\"successMessage\\"];

  function onSubmit(event) {
    const sendWithJs = sendWithJs || sendSubmissionsTo === \\"email\\";

    if (sendSubmissionsTo === \\"zapier\\") {
      event.preventDefault();
    } else if (sendWithJs) {
      if (!(action || sendSubmissionsTo === \\"email\\")) {
        event.preventDefault();
        return;
      }

      event.preventDefault();
      const el = event.currentTarget;
      const headers = customHeaders || {};
      let body;
      const formData = new FormData(el); // TODO: maybe support null

      const formPairs = Array.from(
        event.currentTarget.querySelectorAll(\\"input,select,textarea\\")
      )
        .filter((el) => !!el.name)
        .map((el) => {
          let value;
          const key = el.name;

          if (el instanceof HTMLInputElement) {
            if (el.type === \\"radio\\") {
              if (el.checked) {
                value = el.name;
                return {
                  key,
                  value,
                };
              }
            } else if (el.type === \\"checkbox\\") {
              value = el.checked;
            } else if (el.type === \\"number\\" || el.type === \\"range\\") {
              const num = el.valueAsNumber;

              if (!isNaN(num)) {
                value = num;
              }
            } else if (el.type === \\"file\\") {
              // TODO: one vs multiple files
              value = el.files;
            } else {
              value = el.value;
            }
          } else {
            value = el.value;
          }

          return {
            key,
            value,
          };
        });
      let contentType = contentType;

      if (sendSubmissionsTo === \\"email\\") {
        contentType = \\"multipart/form-data\\";
      }

      Array.from(formPairs).forEach(({ value }) => {
        if (
          value instanceof File ||
          (Array.isArray(value) && value[0] instanceof File) ||
          value instanceof FileList
        ) {
          contentType = \\"multipart/form-data\\";
        }
      }); // TODO: send as urlEncoded or multipart by default
      // because of ease of use and reliability in browser API
      // for encoding the form?

      if (contentType !== \\"application/json\\") {
        body = formData;
      } else {
        // Json
        const json = {};
        Array.from(formPairs).forEach(({ value, key }) => {
          set(json, key, value);
        });
        body = JSON.stringify(json);
      }

      if (contentType && contentType !== \\"multipart/form-data\\") {
        if (
          /* Zapier doesn't allow content-type header to be sent from browsers */
          !(sendWithJs && action?.includes(\\"zapier.com\\"))
        ) {
          headers[\\"content-type\\"] = contentType;
        }
      }

      const presubmitEvent = new CustomEvent(\\"presubmit\\", {
        detail: {
          body,
        },
      });

      if (formRef) {
        formRef.dispatchEvent(presubmitEvent);

        if (presubmitEvent.defaultPrevented) {
          return;
        }
      }

      formState = \\"sending\\";
      const formUrl = \`\${
        builder.env === \\"dev\\" ? \\"http://localhost:5000\\" : \\"https://builder.io\\"
      }/api/v1/form-submit?apiKey=\${builder.apiKey}&to=\${btoa(
        sendSubmissionsToEmail || \\"\\"
      )}&name=\${encodeURIComponent(name || \\"\\")}\`;
      fetch(
        sendSubmissionsTo === \\"email\\" ? formUrl : action,
        /* TODO: throw error if no action URL */
        {
          body,
          headers,
          method: method || \\"post\\",
        }
      ).then(
        async (res) => {
          let body;
          const contentType = res.headers.get(\\"content-type\\");

          if (contentType && contentType.indexOf(\\"application/json\\") !== -1) {
            body = await res.json();
          } else {
            body = await res.text();
          }

          if (!res.ok && errorMessagePath) {
            /* TODO: allow supplying an error formatter function */
            let message = get(body, errorMessagePath);

            if (message) {
              if (typeof message !== \\"string\\") {
                /* TODO: ideally convert json to yaml so it woul dbe like
           error: - email has been taken */
                message = JSON.stringify(message);
              }

              formErrorMessage = message;
            }
          }

          responseData = body;
          formState = res.ok ? \\"success\\" : \\"error\\";

          if (res.ok) {
            const submitSuccessEvent = new CustomEvent(\\"submit:success\\", {
              detail: {
                res,
                body,
              },
            });

            if (formRef) {
              formRef.dispatchEvent(submitSuccessEvent);

              if (submitSuccessEvent.defaultPrevented) {
                return;
              }
              /* TODO: option to turn this on/off? */

              if (resetFormOnSubmit !== false) {
                formRef.reset();
              }
            }
            /* TODO: client side route event first that can be preventDefaulted */

            if (successUrl) {
              if (formRef) {
                const event = new CustomEvent(\\"route\\", {
                  detail: {
                    url: successUrl,
                  },
                });
                formRef.dispatchEvent(event);

                if (!event.defaultPrevented) {
                  location.href = successUrl;
                }
              } else {
                location.href = successUrl;
              }
            }
          }
        },
        (err) => {
          const submitErrorEvent = new CustomEvent(\\"submit:error\\", {
            detail: {
              error: err,
            },
          });

          if (formRef) {
            formRef.dispatchEvent(submitErrorEvent);

            if (submitErrorEvent.defaultPrevented) {
              return;
            }
          }

          responseData = err;
          formState = \\"error\\";
        }
      );
    }
  }
  $: submissionState = () => {
    return (Builder.isEditing && previewState) || formState;
  };

  let formRef;

  let formState = \\"unsubmitted\\";
  let responseData = null;
  let formErrorMessage = \\"\\";
</script>

<form
  {validate}
  bind:this={formRef}
  action={!sendWithJs && action}
  {method}
  {name}
  on:submit={(event) => {
    onSubmit(event);
  }}
  {...attributes}
>
  <div _text=\\"\\" />
  {#if builderBlock && builderBlock.children}
    <div _text=\\"\\" />

    {#each builderBlock?.children as block, index (block.id)}
      <BuilderBlockComponent {block} {index} />
    {/each}

    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
  {#if submissionState() === \\"error\\"}
    <div _text=\\"\\" />
    <BuilderBlocks dataPath=\\"errorMessage\\" blocks={errorMessage} />
    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
  {#if submissionState() === \\"sending\\"}
    <div _text=\\"\\" />
    <BuilderBlocks dataPath=\\"sendingMessage\\" blocks={sendingMessage} />
    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
  {#if submissionState() === \\"error\\" && responseData}
    <div _text=\\"\\" />
    <pre class=\\"builder - form - error - text pre\\"><div
        _text=\\"\\"
      />{JSON.stringify(responseData, null, 2)}<div _text=\\"\\" /></pre>
    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
  {#if submissionState() === \\"success\\"}
    <div _text=\\"\\" />
    <BuilderBlocks dataPath=\\"successMessage\\" blocks={successMessage} />
    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
</form>

<style>
  .pre {
    padding: 10px;
    color: red;
    text-align: center;
  }
</style>"
`;

exports[`Svelte > jsx > Typescript Test > Image 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  // TODO: AMP Support?
  export interface ImageProps {
    _class?: string;
    image: string;
    sizes?: string;
    lazy?: boolean;
    height?: number;
    width?: number;
    altText?: string;
    backgroundSize?: string;
    backgroundPosition?: string; // TODO: Support generating Builder.io and or Shopify \`srcset\`s when needed

    srcset?: string; // TODO: Implement support for custom aspect ratios

    aspectRatio?: number; // TODO: This might not work as expected in terms of positioning

    children?: any;
  }
</script>

<script lang=\\"ts\\">
  import { onDestroy, onMount } from \\"svelte\\";

  export let lazy: ImageProps[\\"lazy\\"];
  export let altText: ImageProps[\\"altText\\"];
  export let _class: ImageProps[\\"_class\\"];
  export let image: ImageProps[\\"image\\"];
  export let srcset: ImageProps[\\"srcset\\"];
  export let sizes: ImageProps[\\"sizes\\"];

  function setLoaded() {
    imageLoaded = true;
  }

  function useLazyLoading() {
    // TODO: Add more checks here, like testing for real web browsers
    return !!lazy && isBrowser();
  }

  function isBrowser() {
    return (
      typeof window !== \\"undefined\\" && window.navigator.product != \\"ReactNative\\"
    );
  }

  let pictureRef;

  let scrollListener = null;
  let imageLoaded = false;
  let load = false;

  onMount(() => {
    if (useLazyLoading()) {
      // throttled scroll capture listener
      const listener = () => {
        if (pictureRef) {
          const rect = pictureRef.getBoundingClientRect();
          const buffer = window.innerHeight / 2;

          if (rect.top < window.innerHeight + buffer) {
            setLoad(true);
            scrollListener = null;
            window.removeEventListener(\\"scroll\\", listener);
          }
        }
      };

      scrollListener = listener;
      window.addEventListener(\\"scroll\\", listener, {
        capture: true,
        passive: true,
      });
      listener();
    }
  });

  onDestroy(() => {
    if (scrollListener) {
      window.removeEventListener(\\"scroll\\", scrollListener);
    }
  });
</script>

<div>
  <div _text=\\"\\" />
  <picture bind:this={pictureRef}
    ><div _text=\\"\\" />
    {#if !useLazyLoading() || load}
      <div _text=\\"\\" />
      <img
        alt={altText}
        aria-role={altText ? \\"presentation\\" : undefined}
        class={\\"builder-image\\" + (_class ? \\" \\" + _class : \\"\\") + \\" img\\"}
        src={image}
        on:load={(event) => {
          setLoaded();
        }}
        {srcset}
        {sizes}
      />
      <div _text=\\"\\" />
    {/if}
    <div _text=\\"\\" />
    <source {srcset} />
    <div _text=\\"\\" /></picture
  >
  <div _text=\\"\\" />
  <slot />
  <div _text=\\"\\" />
</div>

<style>
  .img {
    opacity: 1;
    transition: opacity 0.2s ease-in-out;
    object-fit: cover;
    object-position: center;
  }
</style>"
`;

exports[`Svelte > jsx > Typescript Test > Image State 1`] = `
"unknown: Unexpected token, expected \\"{\\" (1:20)

> 1 | let _ = custom-class
    |                     ^"
`;

exports[`Svelte > jsx > Typescript Test > Img 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  export interface ImgProps {
    attributes?: any;
    imgSrc?: string;
    altText?: string;
    backgroundSize?: \\"cover\\" | \\"contain\\";
    backgroundPosition?:
      | \\"center\\"
      | \\"top\\"
      | \\"left\\"
      | \\"right\\"
      | \\"bottom\\"
      | \\"top left\\"
      | \\"top right\\"
      | \\"bottom left\\"
      | \\"bottom right\\";
  }
</script>

<script lang=\\"ts\\">
  import { Builder } from \\"@builder.io/sdk\\";

  export let backgroundSize: ImgProps[\\"backgroundSize\\"];
  export let backgroundPosition: ImgProps[\\"backgroundPosition\\"];
  export let attributes: ImgProps[\\"attributes\\"];
  export let imgSrc: ImgProps[\\"imgSrc\\"];
  export let altText: ImgProps[\\"altText\\"];

  function mitosis_styling(node, vars) {
    Object.entries(vars || {}).forEach(([p, v]) => {
      if (p.startsWith(\\"--\\")) {
        node.style.setProperty(p, v);
      } else {
        node.style[p] = v;
      }
    });
  }
</script>

<img
  use:mitosis_styling={{
    objectFit: backgroundSize || \\"cover\\",
    objectPosition: backgroundPosition || \\"center\\",
  }}
  {...attributes}
  key={(Builder.isEditing && imgSrc) || \\"default-key\\"}
  alt={altText}
  src={imgSrc}
/>"
`;

exports[`Svelte > jsx > Typescript Test > Input 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  export interface FormInputProps {
    type?: string;
    attributes?: any;
    name?: string;
    value?: string;
    placeholder?: string;
    defaultValue?: string;
    required?: boolean;
  }
</script>

<script lang=\\"ts\\">
  import { Builder } from \\"@builder.io/sdk\\";

  export let attributes: FormInputProps[\\"attributes\\"];
  export let defaultValue: FormInputProps[\\"defaultValue\\"];
  export let placeholder: FormInputProps[\\"placeholder\\"];
  export let type: FormInputProps[\\"type\\"];
  export let name: FormInputProps[\\"name\\"];
  export let value: FormInputProps[\\"value\\"];
  export let required: FormInputProps[\\"required\\"];
</script>

<input
  {...attributes}
  key={Builder.isEditing && defaultValue ? defaultValue : \\"default-key\\"}
  {placeholder}
  {type}
  {name}
  {value}
  {defaultValue}
  {required}
/>"
`;

exports[`Svelte > jsx > Typescript Test > RawText 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  export interface RawTextProps {
    attributes?: any;
    text?: string; // builderBlock?: any;
  }
</script>

<script lang=\\"ts\\">
  export let attributes: RawTextProps[\\"attributes\\"];
  export let text: RawTextProps[\\"text\\"];
</script>

<span class={attributes?.class || attributes?.className}
  >{@html text || \\"\\"}</span
>"
`;

exports[`Svelte > jsx > Typescript Test > Section 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  export interface SectionProps {
    maxWidth?: number;
    attributes?: any;
    children?: any;
  }
</script>

<script lang=\\"ts\\">
  export let attributes: SectionProps[\\"attributes\\"];
  export let maxWidth: SectionProps[\\"maxWidth\\"];

  function mitosis_styling(node, vars) {
    Object.entries(vars || {}).forEach(([p, v]) => {
      if (p.startsWith(\\"--\\")) {
        node.style.setProperty(p, v);
      } else {
        node.style[p] = v;
      }
    });
  }
</script>

<section
  use:mitosis_styling={maxWidth && typeof maxWidth === \\"number\\"
    ? {
        maxWidth: maxWidth,
      }
    : undefined}
  {...attributes}
>
  <div _text=\\"\\" />
  <slot />
  <div _text=\\"\\" />
</section>"
`;

exports[`Svelte > jsx > Typescript Test > Section 2`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  export interface SectionProps {
    maxWidth?: number;
    attributes?: any;
    children?: any;
  }
</script>

<script lang=\\"ts\\">
  export let attributes: SectionProps[\\"attributes\\"];

  function mitosis_styling(node, vars) {
    Object.entries(vars || {}).forEach(([p, v]) => {
      if (p.startsWith(\\"--\\")) {
        node.style.setProperty(p, v);
      } else {
        node.style[p] = v;
      }
    });
  }

  let max = 42;
  let items = [42];
</script>

{#if max}
  <div _text=\\"\\" />

  {#each items as item}
    <section
      use:mitosis_styling={{
        maxWidth: item + max,
      }}
      {...attributes}
    >
      <div _text=\\"\\" />
      <slot />
      <div _text=\\"\\" />
    </section>
  {/each}

  <div _text=\\"\\" />
{/if}"
`;

exports[`Svelte > jsx > Typescript Test > Select 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  export interface FormSelectProps {
    options?: {
      name?: string;
      value: string;
    }[];
    attributes?: any;
    name?: string;
    value?: string;
    defaultValue?: string;
  }
</script>

<script lang=\\"ts\\">
  import { Builder } from \\"@builder.io/sdk\\";

  export let attributes: FormSelectProps[\\"attributes\\"];
  export let value: FormSelectProps[\\"value\\"];
  export let defaultValue: FormSelectProps[\\"defaultValue\\"];
  export let name: FormSelectProps[\\"name\\"];
  export let options: FormSelectProps[\\"options\\"];
</script>

<select
  {...attributes}
  {value}
  key={Builder.isEditing && defaultValue ? defaultValue : \\"default-key\\"}
  {defaultValue}
  {name}
  ><div _text=\\"\\" />
  {#each options as option, index}
    <option value={option.value} data-index={index}
      ><div _text=\\"\\" />
      {option.name || option.value}
      <div _text=\\"\\" /></option
    >
  {/each}
  <div _text=\\"\\" /></select
>"
`;

exports[`Svelte > jsx > Typescript Test > Stamped.io 1`] = `
"unknown: Missing semicolon. (1:13)

> 1 | let _ = Write a review
    |              ^"
`;

exports[`Svelte > jsx > Typescript Test > Submit 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  export interface ButtonProps {
    attributes?: any;
    text?: string;
  }
</script>

<script lang=\\"ts\\">
  export let attributes: ButtonProps[\\"attributes\\"];
  export let text: ButtonProps[\\"text\\"];
</script>

<button type=\\"submit\\" {...attributes}
  ><div _text=\\"\\" />
  {text}
  <div _text=\\"\\" /></button
>"
`;

exports[`Svelte > jsx > Typescript Test > Text 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  export interface TextProps {
    attributes?: any;
    rtlMode: boolean;
    text?: string;
    content?: string;
    builderBlock?: any;
  }
</script>

<script lang=\\"ts\\">
  import { Builder } from \\"@builder.io/sdk\\";

  export let text: TextProps[\\"text\\"];
  export let content: TextProps[\\"content\\"];

  let name = \\"Decadef20\\";
</script>

<div
  contentEditable={allowEditingText || undefined}
  data-name={{
    test: name || \\"any name\\",
  }}
>
  {@html text || content || name || '<p class=\\"text-lg\\">my name</p>'}
</div>"
`;

exports[`Svelte > jsx > Typescript Test > Textarea 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  export interface TextareaProps {
    attributes?: any;
    name?: string;
    value?: string;
    defaultValue?: string;
    placeholder?: string;
  }
</script>

<script lang=\\"ts\\">
  export let attributes: TextareaProps[\\"attributes\\"];
  export let placeholder: TextareaProps[\\"placeholder\\"];
  export let name: TextareaProps[\\"name\\"];
  export let value: TextareaProps[\\"value\\"];
  export let defaultValue: TextareaProps[\\"defaultValue\\"];
</script>

<textarea {...attributes} {placeholder} {name} {value} {defaultValue} />"
`;

exports[`Svelte > jsx > Typescript Test > Video 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  export interface VideoProps {
    attributes?: any;
    video?: string;
    autoPlay?: boolean;
    controls?: boolean;
    muted?: boolean;
    loop?: boolean;
    playsInline?: boolean;
    aspectRatio?: number;
    width?: number;
    height?: number;
    fit?: \\"contain\\" | \\"cover\\" | \\"fill\\";
    position?:
      | \\"center\\"
      | \\"top\\"
      | \\"left\\"
      | \\"right\\"
      | \\"bottom\\"
      | \\"top left\\"
      | \\"top right\\"
      | \\"bottom left\\"
      | \\"bottom right\\";
    posterImage?: string;
    lazyLoad?: boolean;
  }
</script>

<script lang=\\"ts\\">
  export let attributes: VideoProps[\\"attributes\\"];
  export let fit: VideoProps[\\"fit\\"];
  export let position: VideoProps[\\"position\\"];
  export let video: VideoProps[\\"video\\"];
  export let posterImage: VideoProps[\\"posterImage\\"];
  export let autoPlay: VideoProps[\\"autoPlay\\"];
  export let muted: VideoProps[\\"muted\\"];
  export let controls: VideoProps[\\"controls\\"];
  export let loop: VideoProps[\\"loop\\"];

  function mitosis_styling(node, vars) {
    Object.entries(vars || {}).forEach(([p, v]) => {
      if (p.startsWith(\\"--\\")) {
        node.style.setProperty(p, v);
      } else {
        node.style[p] = v;
      }
    });
  }
</script>

<video
  use:mitosis_styling={{
    width: \\"100%\\",
    height: \\"100%\\",
    ...attributes?.style,
    objectFit: fit,
    objectPosition: position,
    // Hack to get object fit to work as expected and
    // not have the video overflow
    borderRadius: 1,
  }}
  preload=\\"none\\"
  {...attributes}
  key={video || \\"no-src\\"}
  poster={posterImage}
  autoplay={autoPlay}
  {muted}
  {controls}
  {loop}
/>"
`;

exports[`Svelte > jsx > Typescript Test > arrowFunctionInUseStore 1`] = `
"<script lang=\\"ts\\">
  function setName(value) {
    name = value;
  }

  function updateNameWithArrowFn(value) {
    name = value;
  }

  let name = \\"steve\\";
</script>

<div>Hello{name}</div>"
`;

exports[`Svelte > jsx > Typescript Test > basicForwardRef 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  export interface Props {
    showInput: boolean;
    inputRef: HTMLInputElement;
  }
</script>

<script lang=\\"ts\\">
  export let inputRef: Props[\\"inputRef\\"];

  let inputRef;

  let name = \\"PatrickJS\\";
</script>

<div>
  <div _text=\\"\\" />
  <input class=\\"input\\" bind:this={inputRef} bind:value={name} />
  <div _text=\\"\\" />
</div>

<style>
  .input {
    color: red;
  }
</style>"
`;

exports[`Svelte > jsx > Typescript Test > basicForwardRefMetadata 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  export interface Props {
    showInput: boolean;
    inputRef: HTMLInputElement;
  }
</script>

<script lang=\\"ts\\">
  export let inputRef: Props[\\"inputRef\\"];

  let inputRef;

  let name = \\"PatrickJS\\";
</script>

<div>
  <div _text=\\"\\" />
  <input class=\\"input\\" bind:this={inputRef} bind:value={name} />
  <div _text=\\"\\" />
</div>

<style>
  .input {
    color: red;
  }
</style>"
`;

exports[`Svelte > jsx > Typescript Test > basicOnUpdateReturn 1`] = `
"<script lang=\\"ts\\">
  let name = \\"PatrickJS\\";

  function onUpdateFn_0() {
    const controller = new AbortController();
    const signal = controller.signal;
    fetch(\\"https://patrickjs.com/api/resource.json\\", {
      signal,
    })
      .then((response) => response.json())
      .then((data) => {
        name = data.name;
      });
    return () => {
      if (!signal.aborted) {
        controller.abort();
      }
    };
  }
  $: onUpdateFn_0(...[name]);
</script>

<div>Hello{name}</div>"
`;

exports[`Svelte > jsx > Typescript Test > class + ClassName + css 1`] = `
"unknown: Missing semicolon. (1:13)

> 1 | let _ = test2 test
    |              ^"
`;

exports[`Svelte > jsx > Typescript Test > class + css 1`] = `
"unknown: Missing semicolon. (2:12)

  1 | let _ = 
> 2 |       Hello! I can run in React, Vue, Solid, or Liquid!
    |             ^
  3 |     "
`;

exports[`Svelte > jsx > Typescript Test > className + css 1`] = `
"unknown: Missing semicolon. (2:12)

  1 | let _ = 
> 2 |       Hello! I can run in React, Vue, Solid, or Liquid!
    |             ^
  3 |     "
`;

exports[`Svelte > jsx > Typescript Test > className 1`] = `
"unknown: Missing semicolon. (1:10)

> 1 | let _ = no binding
    |           ^"
`;

exports[`Svelte > jsx > Typescript Test > componentWithContext 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  export interface ComponentWithContextProps {
    content: string;
  }
</script>

<script lang=\\"ts\\">
  import { getContext, setContext } from \\"svelte\\";

  import Context1 from \\"@dummy/1\\";
  import Context2 from \\"@dummy/2\\";

  export let content: ComponentWithContextProps[\\"content\\"];

  let foo = getContext(Context1.key);
  setContext(Context1.key, {
    foo: \\"bar\\",

    content() {
      return content;
    },
  });
  setContext(Context2.key, {
    bar: \\"baz\\",
  });
</script>

<div _text=\\"\\" />
{foo.value}
<div _text=\\"\\" />"
`;

exports[`Svelte > jsx > Typescript Test > contentState 1`] = `
"unknown: Missing semicolon. (1:15)

> 1 | let _ = setting context
    |                ^"
`;

exports[`Svelte > jsx > Typescript Test > defaultProps 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  export interface ButtonProps {
    attributes?: any;
    text?: string;
    link?: string;
    openLinkInNewTab?: boolean;
  }
</script>

<script lang=\\"ts\\">
  export let link: ButtonProps[\\"link\\"] = \\"https://builder.io/\\";
  export let attributes: ButtonProps[\\"attributes\\"];
  export let openLinkInNewTab: ButtonProps[\\"openLinkInNewTab\\"] = false;
  export let text: ButtonProps[\\"text\\"] = \\"default text\\";
</script>

<div>
  <div _text=\\"\\" />
  {#if link}
    <div _text=\\"\\" />
    <a
      {...attributes}
      href={link}
      target={openLinkInNewTab ? \\"_blank\\" : undefined}
      ><div _text=\\"\\" />
      {text}
      <div _text=\\"\\" /></a
    >
    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
  {#if !link}
    <div _text=\\"\\" />
    <button type=\\"button\\" {...attributes}
      ><div _text=\\"\\" />
      {text}
      <div _text=\\"\\" /></button
    >
    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
</div>"
`;

exports[`Svelte > jsx > Typescript Test > defaultPropsOutsideComponent 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  export interface ButtonProps {
    attributes?: any;
    text?: string;
    link?: string;
    openLinkInNewTab?: boolean;
  }
</script>

<script lang=\\"ts\\">
  export let link: ButtonProps[\\"link\\"] = \\"https://builder.io/\\";
  export let attributes: ButtonProps[\\"attributes\\"];
  export let openLinkInNewTab: ButtonProps[\\"openLinkInNewTab\\"] = false;
  export let text: ButtonProps[\\"text\\"] = \\"default text\\";
</script>

<div>
  <div _text=\\"\\" />
  {#if link}
    <div _text=\\"\\" />
    <a
      {...attributes}
      href={link}
      target={openLinkInNewTab ? \\"_blank\\" : undefined}
      ><div _text=\\"\\" />
      {text}
      <div _text=\\"\\" /></a
    >
    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
  {#if !link}
    <div _text=\\"\\" />
    <button type=\\"button\\" {...attributes}
      ><div _text=\\"\\" />
      {text}
      <div _text=\\"\\" /></button
    >
    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
</div>"
`;

exports[`Svelte > jsx > Typescript Test > defaultValsWithTypes 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  type Props = {
    name: string;
  };
</script>

<script lang=\\"ts\\">
  const DEFAULT_VALUES: Props = {
    name: \\"Sami\\",
  };

  export let name: Props[\\"name\\"];
</script>

<div>Hello{name || DEFAULT_VALUES.name}</div>"
`;

exports[`Svelte > jsx > Typescript Test > expressionState 1`] = `
"<script lang=\\"ts\\">
  export let componentRef;

  let refToUse = !(componentRef instanceof Function) ? componentRef : null;
</script>

<div>{refToUse}</div>"
`;

exports[`Svelte > jsx > Typescript Test > import types 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  type RenderContentProps = {
    options?: GetContentOptions;
    content: BuilderContent;
    renderContentProps: RenderBlockProps;
  };
</script>

<script lang=\\"ts\\">
  import RenderBlock from \\"./builder-render-block.raw\\";

  export let renderContentProps: RenderContentProps[\\"renderContentProps\\"];

  function getRenderContentProps(block, index) {
    return {
      block: block,
      index: index,
    };
  }
</script>

<RenderBlock {...getRenderContentProps(renderContentProps.block, 0)} />"
`;

exports[`Svelte > jsx > Typescript Test > multipleOnUpdate 1`] = `
"<script lang=\\"ts\\">
  import { afterUpdate } from \\"svelte\\";

  afterUpdate(() => {
    console.log(\\"Runs on every update/rerender\\");
  });
  afterUpdate(() => {
    console.log(\\"Runs on every update/rerender as well\\");
  });
</script>

<div />"
`;

exports[`Svelte > jsx > Typescript Test > multipleOnUpdateWithDeps 1`] = `
"<script lang=\\"ts\\">
  let a = \\"a\\";
  let b = \\"b\\";
  let c = \\"c\\";
  let d = \\"d\\";

  function onUpdateFn_0() {
    console.log(\\"Runs when a or b changes\\", a, b);

    if (a === \\"a\\") {
      a = \\"b\\";
    }
  }
  $: onUpdateFn_0(...[a, b]);
  function onUpdateFn_1() {
    console.log(\\"Runs when c or d changes\\", c, d);

    if (a === \\"a\\") {
      a = \\"b\\";
    }
  }
  $: onUpdateFn_1(...[c, d]);
</script>

<div />"
`;

exports[`Svelte > jsx > Typescript Test > multipleSpreads 1`] = `"unknown: Maximum call stack size exceeded"`;

exports[`Svelte > jsx > Typescript Test > nestedShow 1`] = `
"unknown: Unexpected token (1:8)

> 1 | let _ = else-condition-A
    |         ^"
`;

exports[`Svelte > jsx > Typescript Test > nestedStyles 1`] = `
"unknown: Missing semicolon. (2:11)

  1 | let _ = 
> 2 |       Hello world
    |            ^
  3 |     "
`;

exports[`Svelte > jsx > Typescript Test > onInit & onMount 1`] = `
"<script lang=\\"ts\\">
  import { onMount } from \\"svelte\\";

  console.log(\\"onInit\\");

  onMount(() => {
    console.log(\\"onMount\\");
  });
</script>

<div />"
`;

exports[`Svelte > jsx > Typescript Test > onInit 1`] = `
"unknown: Missing semicolon. (1:15)

> 1 | let _ = Default name defined by parent 
    |                ^"
`;

exports[`Svelte > jsx > Typescript Test > onMount 1`] = `
"<script lang=\\"ts\\">
  import { onDestroy, onMount } from \\"svelte\\";

  onMount(() => {
    console.log(\\"Runs on mount\\");
  });

  onDestroy(() => {
    console.log(\\"Runs on unMount\\");
  });
</script>

<div />"
`;

exports[`Svelte > jsx > Typescript Test > onUpdate 1`] = `
"<script lang=\\"ts\\">
  import { afterUpdate } from \\"svelte\\";

  afterUpdate(() => {
    console.log(\\"Runs on every update/rerender\\");
  });
</script>

<div />"
`;

exports[`Svelte > jsx > Typescript Test > onUpdateWithDeps 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  type Props = {
    size: string;
  };
</script>

<script lang=\\"ts\\">
  export let size: Props[\\"size\\"];

  let a = \\"a\\";
  let b = \\"b\\";

  function onUpdateFn_0() {
    console.log(\\"Runs when a, b or size changes\\", a, b, size);
  }
  $: onUpdateFn_0(...[a, b, size]);
</script>

<div />"
`;

exports[`Svelte > jsx > Typescript Test > preserveExportOrLocalStatement 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  type Types = {
    s: any[];
  };

  interface IPost {
    len: number;
  }

  export interface MyBasicComponentProps {
    id: string;
  }
</script>

<script lang=\\"ts\\">
  const b = 3;
  const foo = () => {};
  export const a = 3;
  export const bar = () => {};
  export function run<T>(value: T) {}
</script>

<div />"
`;

exports[`Svelte > jsx > Typescript Test > preserveTyping 1`] = `
"unknown: Missing semicolon. (1:14)

> 1 | let _ = Hello! I can run in React, Vue, Solid, or Liquid! 
    |               ^"
`;

exports[`Svelte > jsx > Typescript Test > propsDestructure 1`] = `
"unknown: Missing semicolon. (2:12)

  1 | let _ = 
> 2 |       Hello! I can run in React, Vue, Solid, or Liquid!
    |             ^
  3 |     "
`;

exports[`Svelte > jsx > Typescript Test > propsInterface 1`] = `
"unknown: Missing semicolon. (1:14)

> 1 | let _ = Hello! I can run in React, Vue, Solid, or Liquid! 
    |               ^"
`;

exports[`Svelte > jsx > Typescript Test > propsType 1`] = `
"unknown: Missing semicolon. (1:14)

> 1 | let _ = Hello! I can run in React, Vue, Solid, or Liquid! 
    |               ^"
`;

exports[`Svelte > jsx > Typescript Test > renderContentExample 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  type Props = {
    customComponents: string[];
    content: {
      blocks: any[];
      id: string;
    };
  };
</script>

<script lang=\\"ts\\">
  import { onMount, setContext } from \\"svelte\\";

  import {
    sendComponentsToVisualEditor,
    dispatchNewContentToVisualEditor,
    trackClick,
  } from \\"@dummy/injection-js\\";
  import BuilderContext from \\"@dummy/context.svelte\\";
  import RenderBlocks from \\"@dummy/RenderBlocks.lite.tsx\\";

  export let content: Props[\\"content\\"];
  export let customComponents: Props[\\"customComponents\\"];

  setContext(BuilderContext.key, {
    get content() {
      return 3;
    },

    get registeredComponents() {
      return 4;
    },
  });

  onMount(() => {
    sendComponentsToVisualEditor(customComponents);
  });

  function onUpdateFn_0() {
    dispatchNewContentToVisualEditor(content);
  }
  $: onUpdateFn_0(...[content]);
</script>

<div
  class=\\"div\\"
  on:click={(event) => {
    trackClick(content.id);
  }}
>
  <div _text=\\"\\" />
  <RenderBlocks blocks={content.blocks} />
  <div _text=\\"\\" />
</div>

<style>
  .div {
    display: flex;
    flex-direction: columns;
  }
</style>"
`;

exports[`Svelte > jsx > Typescript Test > rootFragmentMultiNode 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  export interface ButtonProps {
    attributes?: any;
    text?: string;
    link?: string;
    openLinkInNewTab?: boolean;
  }
</script>

<script lang=\\"ts\\">
  export let link: ButtonProps[\\"link\\"];
  export let attributes: ButtonProps[\\"attributes\\"];
  export let openLinkInNewTab: ButtonProps[\\"openLinkInNewTab\\"];
  export let text: ButtonProps[\\"text\\"];
</script>

<div _text=\\"\\" />

{#if link}
  <div _text=\\"\\" />
  <a
    {...attributes}
    href={link}
    target={openLinkInNewTab ? \\"_blank\\" : undefined}
    ><div _text=\\"\\" />
    {text}
    <div _text=\\"\\" /></a
  >
  <div _text=\\"\\" />
{/if}
<div _text=\\"\\" />

{#if !link}
  <div _text=\\"\\" />
  <button type=\\"button\\" {...attributes}
    ><div _text=\\"\\" />
    {text}
    <div _text=\\"\\" /></button
  >
  <div _text=\\"\\" />
{/if}
<div _text=\\"\\" />"
`;

exports[`Svelte > jsx > Typescript Test > rootShow 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  export interface RenderStylesProps {
    foo: string;
  }
</script>

<script lang=\\"ts\\">
  export let foo: RenderStylesProps[\\"foo\\"];
</script>

{#if foo === \\"bar\\"}
  <div _text=\\"\\" />
  <div>Bar</div>
  <div _text=\\"\\" />
{:else}
  <div>Foo</div>
{/if}"
`;

exports[`Svelte > jsx > Typescript Test > self-referencing component 1`] = `
"unknown: Missing semicolon. (1:13)

> 1 | let _ = Bruce Wayne
    |              ^"
`;

exports[`Svelte > jsx > Typescript Test > self-referencing component with children 1`] = `
"<script lang=\\"ts\\">
  export let name;
</script>

<div>
  <div _text=\\"\\" />
  {name}
  <div _text=\\"\\" />
  <slot />
  <div _text=\\"\\" />
  {#if name === \\"Batman\\"}
    <div _text=\\"\\" />
    <svelte:self name=\\"Bruce\\"
      ><div _text=\\"\\" />
      <div>Wayne</div>
      <div _text=\\"\\" /></svelte:self
    >
    <div _text=\\"\\" />
  {/if}
  <div _text=\\"\\" />
</div>"
`;

exports[`Svelte > jsx > Typescript Test > showWithFor 1`] = `
"unknown: Unexpected token (1:8)

> 1 | let _ = else-condition-A
    |         ^"
`;

exports[`Svelte > jsx > Typescript Test > spreadAttrs 1`] = `
"<script lang=\\"ts\\">
</script>

<input {...attrs} />"
`;

exports[`Svelte > jsx > Typescript Test > spreadNestedProps 1`] = `
"<script lang=\\"ts\\">
  export let nested;
</script>

<input {...nested} />"
`;

exports[`Svelte > jsx > Typescript Test > spreadProps 1`] = `"unknown: Maximum call stack size exceeded"`;

exports[`Svelte > jsx > Typescript Test > subComponent 1`] = `
"<script lang=\\"ts\\">
  import Foo from \\"./foo-sub-component.svelte\\";
</script>

<Foo />"
`;

exports[`Svelte > jsx > Typescript Test > typeDependency 1`] = `
"<script context=\\"module\\" lang=\\"ts\\">
  import type { Foo } from \\"./foo-type\\";

  import type { Foo as Foo2 } from \\"./type-export\\";

  export type TypeDependencyProps = {
    foo: Foo;
    foo2: Foo2;
  };
</script>

<script lang=\\"ts\\">
  export let foo: TypeDependencyProps[\\"foo\\"];
</script>

<div>{foo}</div>"
`;

exports[`Svelte > jsx > Typescript Test > use-style 1`] = `
"<script lang=\\"ts\\">
</script>

<button type=\\"button\\">Button</button>

<style>
  button {
    background: blue;
    color: white;
    font-size: 12px;
    outline: 1px solid black;
  }
</style>"
`;

exports[`Svelte > jsx > Typescript Test > use-style-and-css 1`] = `
"<script lang=\\"ts\\">
</script>

<button type=\\"button\\" class=\\"button\\">Button</button>

<style>
  .button {
    background: blue;
    color: white;
  }

  button {
    font-size: 12px;
    outline: 1px solid black;
  }
</style>"
`;

exports[`Svelte > jsx > Typescript Test > use-style-outside-component 1`] = `
"<script lang=\\"ts\\">
</script>

<button type=\\"button\\">Button</button>

<style>
  button {
    background: blue;
    color: white;
    font-size: 12px;
    outline: 1px solid black;
  }
</style>"
`;

exports[`Svelte > svelte > Javascript Test > basic 1`] = `
"unknown: Missing semicolon. (2:8)

  1 | let _ = 
> 2 |   Hello! I can run in React, Vue, Solid, or Liquid!
    |         ^
  3 |"
`;

exports[`Svelte > svelte > Javascript Test > bindGroup 1`] = `
"unknown: Missing semicolon. (1:13)

> 1 | let _ = Whole wheat
    |              ^"
`;

exports[`Svelte > svelte > Javascript Test > bindProperty 1`] = `
"<script>
  let value = \\"hello\\";
</script>

<input {value} />"
`;

exports[`Svelte > svelte > Javascript Test > classDirective 1`] = `
"<script>
  export let disabled;

  let focus = true;
</script>

<input
  class={\`form-input \${disabled ? \\"disabled\\" : \\"\\"} \${focus ? \\"focus\\" : \\"\\"}\`}
/>"
`;

exports[`Svelte > svelte > Javascript Test > context 1`] = `
"<script>
  import { getContext, setContext } from \\"svelte\\";

  let disabled = getContext(\\"disabled\\".key);
  setContext(\\"activeTab\\", activeTab);

  let activeTab = 0;
</script>

<div>{activeTab}</div>"
`;

exports[`Svelte > svelte > Javascript Test > each 1`] = `
"<script>
  let numbers = [\\"one\\", \\"two\\", \\"three\\"];
</script>

<ul>
  {#each numbers as num}
    <li>{num}</li>
  {/each}
</ul>"
`;

exports[`Svelte > svelte > Javascript Test > html 1`] = `
"<script>
  let html = \\"<b>bold</b>\\";
</script>

<div>{@html html}</div>"
`;

exports[`Svelte > svelte > Javascript Test > ifElse 1`] = `
"<script>
  function toggle() {
    show = !show;
  }

  let show = true;
</script>

{#if show}
  <button
    on:click={(event) => {
      toggle;
    }}>Hide</button
  >
{:else}
  <button
    on:click={(event) => {
      toggle;
    }}>Show</button
  >
{/if}"
`;

exports[`Svelte > svelte > Javascript Test > imports 1`] = `
"<script>
  import Button from \\"./Button.svelte\\";

  let disabled = false;
</script>

<div><Button type=\\"button\\" {disabled}><slot /></Button></div>"
`;

exports[`Svelte > svelte > Javascript Test > lifecycleHooks 1`] = `
"<script>
  import { afterUpdate, onDestroy, onMount } from \\"svelte\\";

  onMount(() => {
    console.log(\\"onMount\\");
  });

  afterUpdate(() => {
    console.log(\\"onAfterUpdate\\");
  });

  onDestroy(() => {
    console.log(\\"onDestroy\\");
  });
</script>

<div />"
`;

exports[`Svelte > svelte > Javascript Test > reactive 1`] = `
"unknown: Missing semicolon. (2:11)

  1 | let _ = 
> 2 |   Lowercase: 
    |            ^"
`;

exports[`Svelte > svelte > Javascript Test > style 1`] = `
"<input class=\\"form - input\\" />

<style>
  input {
    color: red;
    font-size: 12px;
  }

  .form-input:focus {
    outline: 1px solid blue;
  }
</style>"
`;

exports[`Svelte > svelte > Javascript Test > textExpressions 1`] = `
"unknown: Missing semicolon. (2:8)

  1 | let _ = 
> 2 |   normal:
    |         ^
  3 |   "
`;

exports[`Svelte > svelte > Typescript Test > basic 1`] = `
"unknown: Missing semicolon. (2:8)

  1 | let _ = 
> 2 |   Hello! I can run in React, Vue, Solid, or Liquid!
    |         ^
  3 |"
`;

exports[`Svelte > svelte > Typescript Test > bindGroup 1`] = `
"unknown: Missing semicolon. (1:13)

> 1 | let _ = Whole wheat
    |              ^"
`;

exports[`Svelte > svelte > Typescript Test > bindProperty 1`] = `
"<script lang=\\"ts\\">
  let value = \\"hello\\";
</script>

<input {value} />"
`;

exports[`Svelte > svelte > Typescript Test > classDirective 1`] = `
"<script lang=\\"ts\\">
  export let disabled;

  let focus = true;
</script>

<input
  class={\`form-input \${disabled ? \\"disabled\\" : \\"\\"} \${focus ? \\"focus\\" : \\"\\"}\`}
/>"
`;

exports[`Svelte > svelte > Typescript Test > context 1`] = `
"<script lang=\\"ts\\">
  import { getContext, setContext } from \\"svelte\\";

  let disabled = getContext(\\"disabled\\".key);
  setContext(\\"activeTab\\", activeTab);

  let activeTab = 0;
</script>

<div>{activeTab}</div>"
`;

exports[`Svelte > svelte > Typescript Test > each 1`] = `
"<script lang=\\"ts\\">
  let numbers = [\\"one\\", \\"two\\", \\"three\\"];
</script>

<ul>
  {#each numbers as num}
    <li>{num}</li>
  {/each}
</ul>"
`;

exports[`Svelte > svelte > Typescript Test > html 1`] = `
"<script lang=\\"ts\\">
  let html = \\"<b>bold</b>\\";
</script>

<div>{@html html}</div>"
`;

exports[`Svelte > svelte > Typescript Test > ifElse 1`] = `
"<script lang=\\"ts\\">
  function toggle() {
    show = !show;
  }

  let show = true;
</script>

{#if show}
  <button
    on:click={(event) => {
      toggle;
    }}>Hide</button
  >
{:else}
  <button
    on:click={(event) => {
      toggle;
    }}>Show</button
  >
{/if}"
`;

exports[`Svelte > svelte > Typescript Test > imports 1`] = `
"<script lang=\\"ts\\">
  import Button from \\"./Button.svelte\\";

  let disabled = false;
</script>

<div><Button type=\\"button\\" {disabled}><slot /></Button></div>"
`;

exports[`Svelte > svelte > Typescript Test > lifecycleHooks 1`] = `
"<script lang=\\"ts\\">
  import { afterUpdate, onDestroy, onMount } from \\"svelte\\";

  onMount(() => {
    console.log(\\"onMount\\");
  });

  afterUpdate(() => {
    console.log(\\"onAfterUpdate\\");
  });

  onDestroy(() => {
    console.log(\\"onDestroy\\");
  });
</script>

<div />"
`;

exports[`Svelte > svelte > Typescript Test > reactive 1`] = `
"unknown: Missing semicolon. (2:11)

  1 | let _ = 
> 2 |   Lowercase: 
    |            ^"
`;

exports[`Svelte > svelte > Typescript Test > style 1`] = `
"<script lang=\\"ts\\">
</script>

<input class=\\"form - input\\" />

<style>
  input {
    color: red;
    font-size: 12px;
  }

  .form-input:focus {
    outline: 1px solid blue;
  }
</style>"
`;

exports[`Svelte > svelte > Typescript Test > textExpressions 1`] = `
"unknown: Missing semicolon. (2:8)

  1 | let _ = 
> 2 |   normal:
    |         ^
  3 |   "
`;
